# rsvp-reader-pwa

./: index.html  package-lock.json  package.json  vite.config.ts
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-wasm-pipeline-document-service/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-06-PLAN.md  01-06-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md  SPIKE-DECISION.md
.planning/phases/02-rsvp-playback-engine/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  02-06-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-import-ui-reading-view/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-pwa-web-share-target/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-CONTEXT.md  04-RESEARCH.md
.planning/phases/05-browser-extension/: 05-CONTEXT.md  05-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
public/: manifest.json  share-target-sw.js
rsvp-parser/: Cargo.toml
rsvp-parser/.cargo/: config.toml
rsvp-parser/crates/rsvp-parser/: Cargo.toml
rsvp-parser/crates/rsvp-parser/src/: lib.rs  pdf.rs  types.rs
src/: App.tsx  main.tsx  sw.ts
src/components/EntryScreen/: EntryScreen.tsx
src/components/RSVPPlaceholder/: RSVPPlaceholder.tsx
src/components/RSVPReader/: FontSizePanel.tsx  ORPDisplay.tsx  PlaybackControls.tsx  ProgressBar.tsx  RSVPReader.tsx  TextPanel.tsx
src/components/TextPreview/: TextPreview.tsx
src/components/UrlLoader/: UrlLoader.tsx
src/lib/: document-persistence.ts  format-detect.ts  orp.test.ts  orp.ts  scheduler.test.ts  scheduler.ts  tokenize.ts  url-extractor.ts
src/services/: document-service.ts
src/store/: rsvp-store.ts
src/workers/: parser-worker.ts  worker-types.ts
