[package]
name = "rsvp-parser"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
# cdylib = compiled to .wasm for browser use
# rlib = allows `cargo test` to run (tests need a normal Rust lib)

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-bulk-memory", "--enable-nontrapping-float-to-int"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# PDF extraction — optional, gated by feature flag.
# getrandom 0.3.x requires wasm_js Cargo feature on lopdf (not rustflags).
# See .cargo/config.toml for the 0.2.x vs 0.3.x migration note.
pdf-extract = { version = "0.10", optional = true }
lopdf = { version = "0.38", optional = true, features = ["wasm_js"] }

[features]
# pdf feature is enabled by default for spike validation (Plan 02).
# If pdf-extract fails WASM compilation, this reverts to default = [] and
# the fallback (pdfium-render or PDF.js) is documented in SPIKE-DECISION.md.
default = ["pdf"]
pdf = ["dep:pdf-extract", "dep:lopdf"]
